--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "@types/pg": "^8.15.5",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "pg": "^8.16.3"
   }
 }
