poller and tsdb working correctly and fine
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/backend/ws-gateway/package.json
+++ b/backend/ws-gateway/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun --watch index.ts",
+    "start": "bun index.ts"
+  },
   "devDependencies": {
     "@types/ws": "^8.18.1",
     "@types/bun": "latest"
