--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,32 @@
 # Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/exchange
+DATABASE_URL=postgresql://user:password@localhost:5433/postgres
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
 
+# Kafka Configuration
+KAFKA_BROKERS=localhost:9092
+
 # Server Configuration
-PORT=3000
+PORT=3001
 JWT_SECRET=your-jwt-secret-key-here
 
 # WebSocket Gateway Configuration
 WS_PORT=8080
 
+# Notification Services
+RESEND_API_KEY=your-resend-api-key-here
+TWILIO_ACCOUNT_SID=your-twilio-account-sid-here
+TWILIO_AUTH_TOKEN=your-twilio-auth-token-here
+TWILIO_PHONE_NUMBER=your-twilio-phone-number-here
+
+# Google OAuth (if using)
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
 # Environment
 NODE_ENV=development
 
-# Frontend Configuration (if applicable)
-REACT_APP_API_URL=http://localhost:3000
-REACT_APP_WS_URL=ws://localhost:8080
+# Frontend Configuration
+NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_WS_URL=ws://localhost:8080
