--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
-  postgres:
-    image: postgres:15-alpine
-    container_name: exchange-postgres
+  # TimescaleDB Database
+  timescaledb:
+    image: timescale/timescaledb:latest-pg16
+    container_name: timescaledb_container
     environment:
-      POSTGRES_DB: exchange
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - timescaledb_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U user -d postgres"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -33,6 +33,42 @@ services:
       timeout: 10s
       retries: 5
 
+  # Kafka for message queue
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: exchange-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_log:/var/lib/zookeeper/log
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: exchange-kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   # API Server
   server:
     build:
@@ -40,14 +76,20 @@ services:
       dockerfile: Dockerfile
     container_name: exchange-server
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/exchange
-      - PORT=3000
+      - DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
+      - PORT=3001
       - JWT_SECRET=your-jwt-secret-key
       - NODE_ENV=development
+      - REDIS_URL=redis://redis:6379
+      - KAFKA_BROKERS=kafka:29092
     ports:
-      - "3000:3000"
+      - "3001:3001"
     depends_on:
-      postgres:
+      timescaledb:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      kafka:
         condition: service_healthy
     volumes:
       - ./backend/server:/app
@@ -63,11 +105,11 @@ services:
       dockerfile: Dockerfile
     container_name: exchange-poller
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/exchange
+      - DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
       - REDIS_URL=redis://redis:6379
       - NODE_ENV=development
     depends_on:
-      postgres:
+      timescaledb:
         condition: service_healthy
       redis:
         condition: service_healthy
@@ -98,28 +140,55 @@ services:
     command: bun run dev
     restart: unless-stopped
 
-  # Frontend (if needed)
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   container_name: exchange-frontend
-  #   ports:
-  #     - "3001:3000"
-  #   environment:
-  #     - REACT_APP_API_URL=http://localhost:3000
-  #     - REACT_APP_WS_URL=ws://localhost:8080
-  #   depends_on:
-  #     - server
-  #     - ws-gateway
-  #   volumes:
-  #     - ./frontend:/app
-  #     - /app/node_modules
-  #   command: npm start
+  # Notification Worker
+  notification-worker:
+    build:
+      context: ./backend/notification-worker
+      dockerfile: Dockerfile
+    container_name: exchange-notification-worker
+    environment:
+      - NODE_ENV=development
+      - KAFKA_BROKERS=kafka:29092
+      - RESEND_API_KEY=${RESEND_API_KEY:-your-resend-api-key}
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID:-your-twilio-sid}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-your-twilio-token}
+      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER:-your-twilio-phone}
+    depends_on:
+      kafka:
+        condition: service_healthy
+    volumes:
+      - ./backend/notification-worker:/app
+      - /app/node_modules
+    command: bun run dev
+    restart: unless-stopped
+
+  # Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: exchange-frontend
+    environment:
+      - NODE_ENV=development
+      - NEXT_PUBLIC_API_URL=http://localhost:3001
+      - NEXT_PUBLIC_WS_URL=ws://localhost:8080
+    ports:
+      - "3000:3000"
+    depends_on:
+      - server
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
+    command: npm run dev
+    restart: unless-stopped
 
 volumes:
-  postgres_data:
+  timescaledb_data:
   redis_data:
+  zookeeper_data:
+  zookeeper_log:
+  kafka_data:
 
 networks:
   default:
