--- a/backend/poller/Dockerfile
+++ b/backend/poller/Dockerfile
@@ -1,16 +1,16 @@
-FROM oven/bun:1 as base
+FROM oven/bun:1 AS base
 WORKDIR /app
 
 # Install dependencies into temp directory
 # This will cache them and speed up future builds
 FROM base AS install
 RUN mkdir -p /temp/dev
-COPY package.json bun.lockb /temp/dev/
+COPY package.json bun.lock /temp/dev/
 RUN cd /temp/dev && bun install --frozen-lockfile
 
 # Install with --production (exclude devDependencies)
 RUN mkdir -p /temp/prod
-COPY package.json bun.lockb /temp/prod/
+COPY package.json bun.lock /temp/prod/
 RUN cd /temp/prod && bun install --frozen-lockfile --production
 
 # Copy node_modules from temp directory
@@ -26,7 +26,6 @@ COPY --from=prerelease /app/index.ts .
 COPY --from=prerelease /app/types.ts .
 COPY --from=prerelease /app/db ./db
 COPY --from=prerelease /app/lib ./lib
-COPY --from=prerelease /app/scripts ./scripts
 COPY --from=prerelease /app/package.json .
 COPY --from=prerelease /app/tsconfig.json .
 
