--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightweight-charts": "^5.0.0",
+    "lightweight-charts-react-components": "^1.3.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
