--- a/backend/notification-worker/package.json
+++ b/backend/notification-worker/package.json
@@ -3,6 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun run --watch index.ts",
+    "start": "bun run index.ts",
+    "build": "bun build index.ts --outdir ./dist"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
