add some changes to forntend
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/exchange
-TIMESCALE_DATABASE_URL=postgresql://user:XYZ%40123@localhost:5433/user
+DATABASE_URL=postgresql://postgres:postgres@timescaledb:5432/exchange
+TIMESCALE_DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379
 
 # Server Configuration
 PORT=3001
