--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
     container_name: exchange-server
     environment:
       - DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
+      - TIMESCALE_DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
       - PORT=3001
       - JWT_SECRET=your-jwt-secret-key
       - NODE_ENV=development
@@ -168,7 +169,7 @@ services:
     container_name: exchange-frontend
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_API_URL=http://localhost:3001
+      - NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
       - NEXT_PUBLIC_WS_URL=ws://localhost:8080
     ports:
       - "3000:3000"
