--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,13 +28,13 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/pg": "^8.15.5",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.28.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
-    "kafkajs": "^2.2.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3"
