--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
     ports:
-      - "5433:5432"
+      - '5433:5432'
     volumes:
       - timescaledb_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U user -d postgres']
       interval: 30s
       timeout: 10s
       retries: 5
@@ -20,46 +20,11 @@ services:
     image: redis:7-alpine
     container_name: exchange-redis
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
-    container_name: exchange-zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    volumes:
-      - zookeeper_data:/var/lib/zookeeper/data
-      - zookeeper_log:/var/lib/zookeeper/log
-
-  kafka:
-    image: confluentinc/cp-kafka:7.4.0
-    container_name: exchange-kafka
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
-    volumes:
-      - kafka_data:/var/lib/kafka/data
-    healthcheck:
-      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 30s
       timeout: 10s
       retries: 5
@@ -77,15 +42,12 @@ services:
       - JWT_SECRET=your-jwt-secret-key
       - NODE_ENV=development
       - REDIS_URL=redis://redis:6379
-      - KAFKA_BROKERS=kafka:29092
     ports:
-      - "3001:3001"
+      - '3001:3001'
     depends_on:
       timescaledb:
         condition: service_healthy
       redis:
-        condition: service_healthy
-      kafka:
         condition: service_healthy
     volumes:
       - ./apps/backend:/app
@@ -126,7 +88,7 @@ services:
       - REDIS_URL=redis://redis:6379
       - NODE_ENV=development
     ports:
-      - "8080:8080"
+      - '8080:8080'
     depends_on:
       redis:
         condition: service_healthy
@@ -144,13 +106,13 @@ services:
     container_name: exchange-notification-worker
     environment:
       - NODE_ENV=development
-      - KAFKA_BROKERS=kafka:29092
+      - REDIS_URL=redis://redis:6379
       - RESEND_API_KEY=${RESEND_API_KEY:-your-resend-api-key}
       - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID:-your-twilio-sid}
       - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-your-twilio-token}
       - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER:-your-twilio-phone}
     depends_on:
-      kafka:
+      redis:
         condition: service_healthy
     volumes:
       - ./apps/notification-worker:/app
@@ -169,7 +131,7 @@ services:
       - NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
       - NEXT_PUBLIC_WS_URL=ws://localhost:8080
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - backend
     restart: unless-stopped
@@ -177,9 +139,6 @@ services:
 volumes:
   timescaledb_data:
   redis_data:
-  zookeeper_data:
-  zookeeper_log:
-  kafka_data:
 
 networks:
   default:
