migrated prisma to v7 and other updates
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Database Configuration
+# Database Configuration - Using TimescaleDB
 DATABASE_URL=postgresql://user:password@localhost:5433/postgres
-TIMESCALE_DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
+TIMESCALE_DATABASE_URL=postgresql://user:password@localhost:5433/postgres
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
