--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,8 +1,8 @@
-# Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/exchange
+# Database Configuration - Using TimescaleDB
+DATABASE_URL=postgresql://user:password@localhost:5433/postgres
 
 # TimescaleDB Configuration for Candles/Market Data
-TIMESCALE_DATABASE_URL=postgresql://user:XYZ@123@localhost:5433/postgres
+TIMESCALE_DATABASE_URL=postgresql://user:password@localhost:5433/postgres
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
