--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,13 +15,14 @@
     "@types/bun": "latest",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "prisma": "^6.15.0"
+    "prisma": "7"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "@prisma/client": "^6.15.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@types/cors": "^2.8.19",
     "@types/express-session": "^1.18.2",
     "@types/passport": "^1.0.17",
@@ -37,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prom-client": "^15.1.3"
   }
 }
