--- a/apps/backend/prometheus.yml
+++ b/apps/backend/prometheus.yml
@@ -1,7 +1,10 @@
 global:
-  scrape_interval: 4s
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: prometheus
+  - job_name: 'exchange-backend'
     static_configs:
-      - targets: ["192.168.1.104:3001"]
+      - targets: ['host.docker.internal:3001']
+    metrics_path: '/metrics'
+    scrape_interval: 5s
