--- a/apps/poller/.env.example
+++ b/apps/poller/.env.example
@@ -1,1 +1,8 @@
-DATABASE_URL="postgresql://user:XYZ@123@localhost:5433/postgres"
+# Database Configuration - Using TimescaleDB
+DATABASE_URL=postgresql://user:password@localhost:5433/postgres
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+
+# Environment
+NODE_ENV=development
