--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,116 +29,44 @@ services:
       timeout: 10s
       retries: 5
 
-  # Backend API
-  backend:
-    build:
-      context: ./apps/backend
-      dockerfile: ../../docker/backend.Dockerfile
-    container_name: exchange-backend
-    environment:
-      - DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
-      - TIMESCALE_DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
-      - PORT=3001
-      - JWT_SECRET=your-jwt-secret-key
-      - NODE_ENV=development
-      - REDIS_URL=redis://redis:6379
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: exchange-prometheus
+    volumes:
+      - './apps/backend/prometheus.yml:/etc/prometheus/prometheus.yml'
+      - prometheus_data:/prometheus
     ports:
-      - '3001:3001'
-    depends_on:
-      timescaledb:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    volumes:
-      - ./apps/backend:/app
-      - /app/node_modules
-      - /app/generated
-    command: bun run dev
+      - '9090:9090'
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
     restart: unless-stopped
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
 
-  # Data Poller Service
-  poller:
-    build:
-      context: ./apps/poller
-      dockerfile: ../../docker/poller.Dockerfile
-    container_name: exchange-poller
-    environment:
-      - DATABASE_URL=postgresql://user:password@timescaledb:5432/postgres
-      - REDIS_URL=redis://redis:6379
-      - NODE_ENV=development
-    depends_on:
-      timescaledb:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    volumes:
-      - ./apps/poller:/app
-      - /app/node_modules
-    command: bun run dev
-    restart: unless-stopped
-
-  # WebSocket Gateway
-  ws-gateway:
-    build:
-      context: ./apps/ws-gateway
-      dockerfile: ../../docker/ws-gateway.Dockerfile
-    container_name: exchange-ws-gateway
-    environment:
-      - PORT=8080
-      - REDIS_URL=redis://redis:6379
-      - NODE_ENV=development
+  grafana:
+    image: grafana/grafana:latest
+    container_name: exchange-grafana
     ports:
-      - '8080:8080'
-    depends_on:
-      redis:
-        condition: service_healthy
-    volumes:
-      - ./apps/ws-gateway:/app
-      - /app/node_modules
-    command: bun run dev
+      - '3002:3000'
     restart: unless-stopped
-
-  # Notification Worker
-  notification-worker:
-    build:
-      context: ./apps/notification-worker
-      dockerfile: ../../docker/notification-worker.Dockerfile
-    container_name: exchange-notification-worker
     environment:
-      - NODE_ENV=development
-      - REDIS_URL=redis://redis:6379
-      - RESEND_API_KEY=${RESEND_API_KEY:-your-resend-api-key}
-      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID:-your-twilio-sid}
-      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-your-twilio-token}
-      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER:-your-twilio-phone}
-    depends_on:
-      redis:
-        condition: service_healthy
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
-      - ./apps/notification-worker:/app
-      - /app/node_modules
-    command: bun run dev
-    restart: unless-stopped
-
-  # Frontend
-  frontend:
-    build:
-      context: ./apps/frontend
-      dockerfile: ../../docker/frontend.Dockerfile
-    container_name: exchange-frontend
-    environment:
-      - NODE_ENV=development
-      - NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
-      - NEXT_PUBLIC_WS_URL=ws://localhost:8080
-    ports:
-      - '3000:3000'
+      - grafana_data:/var/lib/grafana
+      - ./apps/backend/grafana:/etc/grafana/provisioning/datasources
     depends_on:
-      - backend
-    restart: unless-stopped
+      - prometheus
 
 volumes:
   timescaledb_data:
   redis_data:
+  prometheus_data:
+  grafana_data:
 
 networks:
   default:
