--- a/turbo.json
+++ b/turbo.json
@@ -1,69 +1,21 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
-  "globalEnv": [
-    "NODE_ENV",
-    "DATABASE_URL",
-    "TIMESCALE_DATABASE_URL",
-    "REDIS_URL",
-    "JWT_SECRET",
-    "RESEND_API_KEY",
-    "TWILIO_ACCOUNT_SID",
-    "TWILIO_AUTH_TOKEN",
-    "TWILIO_PHONE_NUMBER",
-    "NEXT_PUBLIC_BACKEND_URL",
-    "NEXT_PUBLIC_WS_URL"
-  ],
+  "$schema": "https://turborepo.com/schema.json",
+  "ui": "tui",
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**", "generated/**"],
-      "env": ["NODE_ENV"]
-    },
-    "poller#dev": {
-      "cache": false,
-      "persistent": true
-    },
-    "backend#dev": {
-      "dependsOn": ["poller#dev"],
-      "cache": false,
-      "persistent": true
-    },
-    "notification-worker#dev": {
-      "dependsOn": ["backend#dev"],
-      "cache": false,
-      "persistent": true
-    },
-    "ws-gateway#dev": {
-      "dependsOn": ["notification-worker#dev"],
-      "cache": false,
-      "persistent": true
-    },
-    "frontend#dev": {
-      "dependsOn": ["ws-gateway#dev"],
-      "cache": false,
-      "persistent": true
-    },
-    "dev": {
-      "dependsOn": ["^dev"],
-      "cache": false,
-      "persistent": true
-    },
-    "start": {
-      "dependsOn": ["build"],
-      "cache": false,
-      "persistent": true
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
-      "dependsOn": ["^build"],
-      "outputs": []
+      "dependsOn": ["^lint"]
     },
-    "clean": {
-      "cache": false
+    "check-types": {
+      "dependsOn": ["^check-types"]
     },
-    "generate": {
+    "dev": {
       "cache": false,
-      "outputs": ["generated/**"]
+      "persistent": true
     }
   }
 }
