refactor: updated monorepo according to turborepo
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "@exchange/frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -31,6 +31,7 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@exchange/typescript-config": "workspace:*",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
