--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,42 @@
-# Database Configuration - Using TimescaleDB
+# Environment
+NODE_ENV=development
+
+# Database Configuration (TimescaleDB)
 DATABASE_URL=postgresql://user:password@localhost:5433/postgres
-TIMESCALE_DATABASE_URL=postgresql://user:password@localhost:5433/postgres
+DB_POOL_MIN=2
+DB_POOL_MAX=10
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
 
 # Server Configuration
 PORT=3001
-JWT_SECRET=your-jwt-secret-key-here
+HOST=0.0.0.0
 
-# WebSocket Gateway Configuration
+# WebSocket Gateway
 WS_PORT=8080
 
-# Notification Services
-RESEND_API_KEY=your-resend-api-key-here
-TWILIO_ACCOUNT_SID=your-twilio-account-sid-here
-TWILIO_AUTH_TOKEN=your-twilio-auth-token-here
-TWILIO_PHONE_NUMBER=your-twilio-phone-number-here
+# Authentication Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+SESSION_SECRET=your-session-secret-change-in-production
+TOKEN_EXPIRES_IN=24h
 
-# Google OAuth (if using)
+# Google OAuth
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
-
-# Environment
-NODE_ENV=development
+GOOGLE_CALLBACK_URL=http://localhost:3001/api/auth/google/callback
 
 # Frontend Configuration
+FRONTEND_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3001
 NEXT_PUBLIC_WS_URL=ws://localhost:8080
+
+# Notification Services
+# Resend (Email)
+RESEND_API_KEY=your-resend-api-key
+FROM_EMAIL=noreply@yourdomain.com
+
+# Twilio (SMS)
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_PHONE_NUMBER=+1234567890
