--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@exchange/backend",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -7,40 +7,37 @@
     "dev": "bun run --watch index.ts",
     "start": "bun run index.ts",
     "build": "bun build index.ts --outdir ./dist",
-    "generate": "bunx prisma generate",
     "clean": "rm -rf dist generated node_modules/.cache"
   },
   "devDependencies": {
+    "@exchange/typescript-config": "workspace:*",
     "@types/bcryptjs": "^3.0.0",
     "@types/bun": "latest",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "prisma": "7"
+    "typescript": "^5"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@exchange/config": "workspace:*",
+    "@exchange/db": "workspace:*",
+    "@exchange/redis": "workspace:*",
+    "@exchange/monitoring": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/express-session": "^1.18.2",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
-    "@types/pg": "^8.15.5",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.28.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.16.3",
-    "prom-client": "^15.1.3"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
